--- a/strategies.html
+++ b/strategies.html
@@ -10,7 +10,7 @@
 	
 		 <header>
 	  <div class="hero">
-    <img src="image%2012.png" class="hero-image" alt="Hero Image">
+    <img src="image12.png" class="hero-image" alt="Hero Image">
 
     <div class="hero-text">
         <h1>Strategize & Conquer </h1>
@@ -98,4 +98,5 @@
 
         
         </body>
+
 </html>
