--- a/strategies.html
+++ b/strategies.html
@@ -10,7 +10,7 @@
 	
 		 <header>
 	  <div class="hero">
-    <img src="image%2012.png" class="hero-image" alt="Hero Image">
+    <img src="Image%2012.png" class="hero-image" alt="Hero Image">
 
     <div class="hero-text">
         <h1>Strategize & Conquer </h1>
@@ -100,4 +100,5 @@
         </body>
 
 </html>
+
 
